# src/controller/reservationController.js
@@ -5,14 +5,14 @@ const utils = require('../helpers/Utils.js');
 const formatter = require('../helpers/jsonFormatter.js');
 
 const validate = require('../middlewares/validationMiddleware.js');
-const apiError = require('../error/apiError.js');
+const reservationSchema = require('../validations/reservationValidation.js');
 
+const apiError = require('../error/apiError.js');
 
 exports.getAll = (req, res, next) => {
 
   genericQuerys.select('reservations')
     .then(reservations => {
-
 
       const rpIds = utils.resJsonToArray(reservations, "id");
 
@@ -21,16 +21,15 @@ exports.getAll = (req, res, next) => {
       reservationRepository.getReservation_procedures(rpIds)
         .then(reservationProcedures => {
 
-
           const procedureIds = utils.resJsonToArray(reservationProcedures, "procedure_id");
-        
+
           genericQuerys.selectMultiID("procedures", procedureIds)
             .then(procedures => {
 
               genericQuerys.selectMultiID("users", userid)
                 .then(users => {
-  
-                  const list = formatter.formater(reservations, reservationProcedures, procedures, users);
+
+                  const list = formatter(reservations, reservationProcedures, procedures, users);
 
                   res.send(list)
                 }, (e) => {
@@ -52,8 +51,47 @@ exports.getAll = (req, res, next) => {
     });
 }
 
-exports.add = (req, res, next) => {}
+exports.add = validate(reservationSchema), (req, res, next) => {
+  const reservation = req.body;
 
-exports.update = (req, res, next) => {}
+  reservationRepository.add(reservation.user_id, reservation.date)
+    .then(id => {
 
-exports.remove = (req, res, next) => {}
+      reservationRepository.addReservationProcedures(id, reservation.procedures)
+        .then(res => {
+            res.send();
+          },
+          (e) => {
+            next(apiError.badRequest(e.message))
+          })
+    })
+}
+
+exports.update = (req, res, next) => {
+
+  const id = req.params.id;
+
+  const reservation = req.body;
+   
+  reservationRepository.refreshReservation(id,reservation.procedures)
+    .then(e => {
+      
+      res.send(e);
+    }, (e) => {
+      next(apiError.badRequest(e.message))
+    })
+}
+
+exports.remove = (req, res, next) => {
+
+  const id = req.params.id;
+
+  genericQuerys.deleteTable("reservation_procedures", id, "reservation_id")
+    .then(() => {
+      res.send();
+    }, (e) => {
+
+      next(apiError.badRequest(e.message))
+    })
+
+}
