# src/validations/adminValidation.js
@@ -1,10 +1,10 @@
 const yup = require('yup');
 
 const adminSchema = yup.object().shape({
-  
+
   name: yup.string().required(),
   email: yup.string().required().email(),
-  password: yup.string().required(),
+  password: yup.string().required().min(5),
 
 });
 
