# src/validations/reservationValidation.js
@@ -1,0 +1,12 @@
+const yup = require('yup')
+const procedureValidation = require('../validations/procedureValidation.js');
+
+const reservationValidation = yup.object().shape({
+  date: yup.date().required(),
+  user_id: yup.number().required().integer(),
+  procedures: yup.array().of(
+      yup.number().integer().required()
+    ),
+  })
+
+module.exports = reservationValidation;
